# Rust-TP-Final

./: README.md  build.sh
contrato_reportes/: Cargo.toml  clippy.toml  lib.rs
diagramas_y_referencias/: diagrama_de_clases.drawio
sistema_votacion/: .gitignore  Cargo.toml  administrador.rs  build.sh  candidato.rs  clippy.toml  coverage.sh  eleccion.rs  enums.rs  fecha.rs  lib.rs  reportes.rs  target  usuario.rs  votante.rs
sistema_votacion/contrato_reportes/: lib.rs
